--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin:0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.users-list-container{
+  display:flex;
+  flex-direction:column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height:100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.users-list-heading{
+  color:#323f4b;
+  font-size:32px;
+  font-weight:bold;
+  font-family:"Roboto";
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 768px){
+  .users-list-heading{
+    font-size: 54px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.users-list{
+  display:flex;
+  flex-direction:column;
+  list-style-type: none;
 }
